fix: File uploader overflow etc. & Add license page

--- a/src/client/style/explorer.less
+++ b/src/client/style/explorer.less
@@ -138,7 +138,7 @@
         }
     }
     .sidebar-left-container {
-        flex: 1;
+        flex: 1.3;
         background-color: @light-gray4;
         * {
             color: @theme-color;
@@ -184,10 +184,13 @@
             color: @theme-color;
         }
         .about-container {
-            
+            object {
+                vertical-align: bottom;
+                margin-right: 10px;
+            }
         }
         .upload-container {
-            
+            overflow-y: auto;
         }
         .system-info-container {
             ul {
